# Atlas

./: .gitignore  README.md  app.py  main.py  pyproject.toml  run.sh
config/: settings.py
core/: __init__.py  ai_engine.py  atlas.py  brain.py  code_executor.py  config.py  evolution_controller.py  git_manager.py  location.py  memory.py  tool_generator.py  tool_manager.py  tools.py  weather.py  web_reader.py
core/self_evolution/: __init__.py  capabilities.json  capability_manager.py  code_generator.py  git_operator.py  sandbox_tester.py
core/tools/: code_executor.py  knowledge.py  weather.py  web_search.py
static/css/: style.css
static/js/: main.js
templates/: index.html
